tests/liquid/neg/simple/glob-001.js
/*@ glob :: { number | v > 10 } */
var glob = true;

